// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Element component collapsed element renders properly 1`] = `
<div>
  <div
    class="element collapsed"
  >
    <span
      class="connector"
    >
      <span
        class="plusminus"
        title="Expand"
      />
      <span
        class="draghandle"
        draggable="true"
      />
    </span>
    <span
      class="tag opening"
    >
      <span
        class="punc"
      >
        &lt;
      </span>
      <span
        class="name"
      >
        root
      </span>
      <span
        class="punc slash"
      >
        /
      </span>
      <span
        class="punc"
      >
        &gt;
      </span>
    </span>
    <span
      class="prominentChildren"
    />
    <span
      class="childrenCollapsed focusable"
    >
      text
    </span>
    <div
      class="children"
    >
      <div
        class="element noChildren"
      >
        <span
          class="connector"
        >
          <span
            class="plusminus"
            title="Collapse"
          />
          <span
            class="draghandle"
            draggable="true"
          />
        </span>
        <span
          class="tag opening"
        >
          <span
            class="punc"
          >
            &lt;
          </span>
          <span
            class="name"
          >
            child
          </span>
          <span
            class="punc slash"
          >
            /
          </span>
          <span
            class="punc"
          >
            &gt;
          </span>
        </span>
        <span
          class="prominentChildren"
        />
        <span
          class="childrenCollapsed focusable"
        />
        <div
          class="children"
        />
      </div>
      <div
        class="textnode focusable"
      >
        <span
          class="value"
        >
          text
        </span>
      </div>
    </div>
    <span
      class="tag closing"
    >
      <span
        class="punc"
      >
        &lt;
      </span>
      <span
        class="punc slash"
      >
        /
      </span>
      <span
        class="name"
      >
        root
      </span>
      <span
        class="punc"
      >
        &gt;
      </span>
    </span>
  </div>
</div>
`;

exports[`Element component element with attribute renders properly 1`] = `
<div>
  <div
    class="element noChildren"
  >
    <span
      class="connector"
    >
      <span
        class="plusminus"
        title="Collapse"
      />
      <span
        class="draghandle"
        draggable="true"
      />
    </span>
    <span
      class="tag opening"
    >
      <span
        class="punc"
      >
        &lt;
      </span>
      <span
        class="name"
      >
        root
      </span>
      <span
        class="attributes"
      >
        <span
          class="attribute"
        >
          <span
            class="punc"
          >
             
          </span>
          <span
            class="name"
          >
            a
          </span>
          <span
            class="punc"
          >
            =
          </span>
          <span
            class="valueContainer"
          >
            <span
              class="punc"
            >
              "
            </span>
            <span
              class="value"
            >
              b
            </span>
            <span
              class="punc"
            >
              "
            </span>
          </span>
        </span>
      </span>
      <span
        class="punc slash"
      >
        /
      </span>
      <span
        class="punc"
      >
        &gt;
      </span>
    </span>
    <span
      class="prominentChildren"
    />
    <span
      class="childrenCollapsed focusable"
    />
    <div
      class="children"
    />
  </div>
</div>
`;

exports[`Element component expanded element renders properly 1`] = `
<div>
  <div
    class="element"
  >
    <span
      class="connector"
    >
      <span
        class="plusminus"
        title="Collapse"
      />
      <span
        class="draghandle"
        draggable="true"
      />
    </span>
    <span
      class="tag opening"
    >
      <span
        class="punc"
      >
        &lt;
      </span>
      <span
        class="name"
      >
        root
      </span>
      <span
        class="punc slash"
      >
        /
      </span>
      <span
        class="punc"
      >
        &gt;
      </span>
    </span>
    <span
      class="prominentChildren"
    />
    <span
      class="childrenCollapsed focusable"
    >
      text
    </span>
    <div
      class="children"
    >
      <div
        class="element noChildren"
      >
        <span
          class="connector"
        >
          <span
            class="plusminus"
            title="Collapse"
          />
          <span
            class="draghandle"
            draggable="true"
          />
        </span>
        <span
          class="tag opening"
        >
          <span
            class="punc"
          >
            &lt;
          </span>
          <span
            class="name"
          >
            child
          </span>
          <span
            class="punc slash"
          >
            /
          </span>
          <span
            class="punc"
          >
            &gt;
          </span>
        </span>
        <span
          class="prominentChildren"
        />
        <span
          class="childrenCollapsed focusable"
        />
        <div
          class="children"
        />
      </div>
      <div
        class="textnode focusable"
      >
        <span
          class="value"
        >
          text
        </span>
      </div>
    </div>
    <span
      class="tag closing"
    >
      <span
        class="punc"
      >
        &lt;
      </span>
      <span
        class="punc slash"
      >
        /
      </span>
      <span
        class="name"
      >
        root
      </span>
      <span
        class="punc"
      >
        &gt;
      </span>
    </span>
  </div>
</div>
`;
